framec/tests/snapshots/dart_snapshots__async_attribute.snap
---
source: framec/tests/dart_snapshots.rs
expression: "compile_fixture(\"14_async_attribute\", \"dart\")"
---
// ignore_for_file: unused_field, unused_element, unused_local_variable, non_constant_identifier_names, constant_identifier_names, library_private_types_in_public_api, prefer_final_fields, type=lint

class AsyncFetcherFrameEvent {
    late String _message;
    late List<dynamic> _parameters;

    AsyncFetcherFrameEvent(String message, List<dynamic> parameters) {
        this._message = message;
        this._parameters = parameters;
    }
}


class AsyncFetcherFrameContext {
    late AsyncFetcherFrameEvent event;
    dynamic _return;
    late Map<String, dynamic> _data;
    late bool _transitioned;

    AsyncFetcherFrameContext(AsyncFetcherFrameEvent event, dynamic default_return) {
        this.event = event;
        this._return = default_return;
        this._data = <String, dynamic>{};
        this._transitioned = false;
    }
}


class AsyncFetcherCompartment {
    late String state;
    late List<dynamic> state_args;
    late Map<String, dynamic> state_vars;
    late List<dynamic> enter_args;
    late List<dynamic> exit_args;
    dynamic forward_event;
    AsyncFetcherCompartment? parent_compartment;

    AsyncFetcherCompartment(String state, [AsyncFetcherCompartment? parent_compartment = null]) {
        this.state = state;
        this.state_args = [];
        this.state_vars = <String, dynamic>{};
        this.enter_args = [];
        this.exit_args = [];
        this.forward_event = null;
        this.parent_compartment = parent_compartment;
    }

    AsyncFetcherCompartment copy() {
        final c = AsyncFetcherCompartment(this.state, this.parent_compartment);
        c.state_args = List<dynamic>.from(this.state_args);
        c.state_vars = Map<String, dynamic>.from(this.state_vars);
        c.enter_args = List<dynamic>.from(this.enter_args);
        c.exit_args = List<dynamic>.from(this.exit_args);
        c.forward_event = this.forward_event;
        return c;
    }
}


class AsyncFetcher {
    late _AsyncFetcherMachine machine;
    late bool busy;
    String? in_flight;

    AsyncFetcher() {
        this.machine = _AsyncFetcherMachine();
        this.busy = false;
        this.in_flight = null;
    }

    void _frame_init() {
    }

    factory AsyncFetcher.create() {
        final c = AsyncFetcher();
        c._frame_init();
        return c;
    }

    Future<String> fetch(String key) async {
        if (this.busy) {
            throw StateError(
                "E703: system busy: cannot enter 'fetch' while '${this.in_flight ?? "?"}' is in flight"
            );
        }
        this.busy = true;
        this.in_flight = "fetch";
        try {
            return await this.machine.fetch(key);
        } finally {
            this.in_flight = null;
            this.busy = false;
        }
    }

    Future<void> init() async {
        await this.machine.init();
    }
}


class _AsyncFetcherMachine {
    late List<AsyncFetcherCompartment> _state_stack;
    late AsyncFetcherCompartment __compartment;
    AsyncFetcherCompartment? __next_compartment;
    late List<AsyncFetcherFrameContext> _context_stack;
    Cache cache = nil;

    _AsyncFetcherMachine() {
        this._state_stack = [];
        this._context_stack = [];
        this.__compartment = this.__prepareEnter("Ready", [], []);
        this.__next_compartment = null;
    }

    void _frame_init() {
    }

    factory _AsyncFetcherMachine.create() {
        final c = _AsyncFetcherMachine();
        c._frame_init();
        return c;
    }

    Map<String, List<String>> hsm_chain() {
        return {
            "Ready": ["Ready"],
        };
    }
    AsyncFetcherCompartment __prepareEnter(String leaf, List<dynamic> state_args, List<dynamic> enter_args) {
        AsyncFetcherCompartment? comp = null;
        for (final name in hsm_chain()[leaf]!) {
            final new_comp = AsyncFetcherCompartment(name);
            new_comp.state_args = List<dynamic>.from(state_args);
            new_comp.enter_args = List<dynamic>.from(enter_args);
            new_comp.parent_compartment = comp;
            comp = new_comp;
        }
        return comp!;
    }

    void __prepareExit(List<dynamic> exit_args) {
        AsyncFetcherCompartment? comp = __compartment;
        while (comp != null) {
            comp.exit_args = List<dynamic>.from(exit_args);
            comp = comp.parent_compartment;
        }
    }

    Future<void> __kernel(AsyncFetcherFrameEvent __e) async {
        // Route event to current state.
        await __router(__e);
        // Drain any transitions queued by the handler.
        while (__next_compartment != null) {
            final next_compartment = __next_compartment!;
            __next_compartment = null;
            // Exit the current (leaf) state.
            final exit_event = AsyncFetcherFrameEvent("<\$", __compartment.exit_args);
            await __router(exit_event);
            // Switch to the new compartment.
            __compartment = next_compartment;
            // Three-branch forward-event handling.
            final forward_event = next_compartment.forward_event;
            next_compartment.forward_event = null;
            if (forward_event == null) {
                // No forwarded event — synthesize a fresh $>.
                final enter_event = AsyncFetcherFrameEvent("\$>", __compartment.enter_args);
                await __router(enter_event);
            } else if (forward_event._message == "\$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                await __router(forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                final enter_event = AsyncFetcherFrameEvent("\$>", __compartment.enter_args);
                await __router(enter_event);
                await __router(forward_event);
            }
            for (final ctx in _context_stack) {
                ctx._transitioned = true;
            }
        }
    }

    Future<void> __router(AsyncFetcherFrameEvent __e) async {
        switch (__compartment.state) {
            case "Ready":
                await _state_Ready(__e, __compartment);
                break;
        }
    }

    void __transition(AsyncFetcherCompartment next_compartment) {
        __next_compartment = next_compartment;
    }

    Future<String> fetch(String key) async {
        final __e = AsyncFetcherFrameEvent("fetch", [key]);
        final __ctx = AsyncFetcherFrameContext(__e, '');
        _context_stack.add(__ctx);
        try {
            await __kernel(__e);
            return _context_stack.removeLast()._return;
        } catch (__frame_err) {
            _context_stack.removeLast();
            rethrow;
        }
    }

    Future<void> _state_Ready(AsyncFetcherFrameEvent __e, AsyncFetcherCompartment compartment) async {
        if (__e._message == "fetch") {
            await this._s_Ready_hdl_user_fetch(__e, compartment);
            return;
        }
    }

    Future<void> _s_Ready_hdl_user_fetch(AsyncFetcherFrameEvent __e, AsyncFetcherCompartment compartment) async {
        final key = __e._parameters[0] as String;
        this._context_stack[this._context_stack.length - 1]._return = this.cache.get(key);
    }

    Future<void> init() async {
        final __e = AsyncFetcherFrameEvent("\$>", []);
        final __ctx = AsyncFetcherFrameContext(__e, null);
        _context_stack.add(__ctx);
        await __kernel(__e);
        _context_stack.removeLast();
    }
}
